--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -75,7 +75,7 @@
   h4 {
     font-size: 0.75rem;
     font-weight: 700;
-    color: #475569;
+    color: #94A3B8;
     text-transform: uppercase;
     letter-spacing: 0.1em;
     margin-bottom: 16px;
@@ -114,21 +114,21 @@
 
 .copyright {
   font-size: 0.82rem;
-  color: #475569;
+  color: #64748B;
 }
 
 .disclaimer {
   font-size: 0.78rem;
-  color: #334155;
+  color: #64748B;
   line-height: 1.6;
   max-width: 700px;
 
   a {
-    color: #475569;
+    color: #64748B;
     text-decoration: underline;
     text-underline-offset: 2px;
 
-    &:hover { color: #64748B; }
+    &:hover { color: #94A3B8; }
   }
 }
 
